sao: Fix widget / icons / buttons alignment in theme [CUSTOM] (#91)
Fix PCLAS-425

--- a/sao/theme/coog/elements/inputs.less
+++ b/sao/theme/coog/elements/inputs.less
@@ -36,10 +36,7 @@
 
 .input-group-sm>.form-control, .input-group-sm>.input-group-addon {
     font-size:          @input-font-size;
-    height:             2em;
-}
-.input-group-sm>.input-group-btn>.btn {
-    font-size:          @input-btn-size!important;
+    height:             @input-height-less:          @input-btn-size!important;
     margin-left:        unset!important;
     .glyphicon {
         color:          @input-icons-color;
